# server/controllers/getStudentsController.ts
@@ -6,7 +6,7 @@ async function getStudentsController(req: Request, res: Response): Promise<void>
     const students = await getStudents()
     res.json(students)
   } catch (err) {
-    res.status(500).end()
+    res.status(418).end()
   }
 }
 
